      35. megashare.com
      36. midupload.com
      37. mozillashare.com
      38. nonstopshare.com
      39. oron.com
      40. platinshare.com
      41. przeklej.pl
      42. rapida.cc
      43. ravishare.com
      44. rocknum.com
      45. seed-share.com
      46. seedfly.com
      47. share.cx
      48. shareator.net
      49. sharerun.com
      50. sharingmatrix.com
      51. shragle.com
      52. storage.to
      53. storedfiles.me
      54. turboupload.com
      55. uploadfloor.com
      56. uploadmachine.com
      57. uploadstation.com
      58. uploadstube.de
      59. usershare.net
      60. wupload.com
      61. wyslijplik.pl
      62. zalaa.com
      63. zomgupload.com
      64. zshare.net
     * v4.2.110 10/11/2012 05:00 PM UTC: Featured release (public)
	1. New Feature: Check HTTP reponse headers for more accurate/effecient result (http://forum.phpkd.net/project.php?issueid=204)
    2. Bug Fix: Checked BBCode "List" Regex Pattern Disorder (http://forum.phpkd.net/project.php?issueid=199)
    3. Bug Fix: Rapidshare.com falsely report 'some' links (with spaces in file names) (http://forum.phpkd.net/project.php?issueid=200)
    4. Bug Fix: API URL check falsely reported when parameters contain special characters (http://forum.phpkd.net/project.php?issueid=201)
    5. Bug Fix: false reports for netload.in premium user links (http://forum.phpkd.net/project.php?issueid=202)
	6. Bug Fix: false reports for netload.in full links (http://forum.phpkd.net/project.php?issueid=133)
	7. Bug Fix: false reports for netload.in password protected links (http://forum.phpkd.net/project.php?issueid=132)
    8. Bug Fix: All direct links marked falsely as dead (http://forum.phpkd.net/project.php?issueid=192)
	9. General: Removed trail version support.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Brought to you by PHP KingDom (www.phpkd.net)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

$Version: 4.2.110 $ - $Id: install.txt 258 2012-07-10 15:44:48Z PHPKD $